# open5gs

./: .gitignore
.cache/clangd/index/: 5gc-init.c.E6C7174CB4C6B49A.idx  5gc-n2-test.c.9B78C715AE30173C.idx  5gc-xn-test.c.98EA67C3B7F839ED.idx  ANY.c.FBB74BFAD0E8962F.idx  ANY.h.7E9A7AFB53ADA21B.idx  ANY_aper.c.E9F2265B4DE5FDD6.idx  BIT_STRING.c.0C6A5E9346C47483.idx  BIT_STRING.h.C0618BF2C1CE5ACE.idx  BIT_STRING_print.c.51C8131AEFFAEDAD.idx  BIT_STRING_rfill.c.FB41D313DC815E07.idx  ENUMERATED.c.02C095D83FA0F9F8.idx  ENUMERATED.h.2D093576162D40EA.idx  ENUMERATED_aper.c.BE5BA378FB2C4F28.idx  GraphicString.c.59178E1F079A479F.idx  GraphicString.h.791A58832C5A4BED.idx  INTEGER.c.D62DA5E33997924A.idx  INTEGER.h.9BFB93808DB3FA68.idx  INTEGER_aper.c.3486BF97B0584885.idx  INTEGER_print.c.79687DE8C903ADF8.idx  INTEGER_rfill.c.1AA5C754E997980E.idx  NGAP_AMF-TNLAssociationSetupItem.c.06F19BCB7A007C8A.idx  NGAP_AMF-TNLAssociationSetupItem.h.6EC80D1779D2F1FC.idx  NGAP_AMF-TNLAssociationSetupList.c.0CDDE41779B9D08B.idx  NGAP_AMF-TNLAssociationSetupList.h.1EE7212872E4D817.idx  NGAP_AMF-TNLAssociationToAddItem.c.BE4C428887B9D10C.idx  NGAP_AMF-TNLAssociationToAddItem.h.4E9E07824A7609CF.idx  NGAP_AMF-TNLAssociationToAddList.c.B1C0E60BD7223F0D.idx  NGAP_AMF-TNLAssociationToAddList.h.47E22497BAA44ED2.idx  NGAP_AMF-TNLAssociationToRemoveItem.c.BDF155BB1951C18C.idx  NGAP_AMF-TNLAssociationToRemoveItem.h.6E64B40258B58DD7.idx  (+7680 more)
lib/core/: ogs-pool.h  ogs-timer.c
lib/pfcp/: build.c  build.h  context.c  context.h  handler.c  usage_logger.h
lib/sbi/: message.c  message.h  ogs-sbi.h
lib/sbi/openapi/: CMakeLists.txt  README.md  meson.build
lib/sbi/openapi/.openapi-generator/: FILES
lib/sbi/openapi/api/: DefaultAPI.c  DefaultAPI.h
lib/sbi/openapi/docs/: DefaultAPI.md  _3_gppps_data_off_status_any_of.md  _chargingdata__charging_data_ref__update_post_400_response.md  _chargingdata_post_400_response.md  access_network_info_change.md  access_token_err.md  access_token_req.md  access_transfer_information.md  access_transfer_type.md  access_transfer_type_any_of.md  announcement_information.md  announcement_privacy_indicator.md  announcement_privacy_indicator_any_of.md  api_direction.md  api_direction_any_of.md  called_identity_change.md  charging_characteristics_selection_mode.md  charging_characteristics_selection_mode_any_of.md  charging_data_request.md  charging_data_response.md  charging_notify_request.md  charging_notify_response.md  class_identifier.md  class_identifier_any_of.md  coverage_info.md  delivery_report_requested.md  delivery_report_requested_any_of.md  direct_discovery_model.md  direct_discovery_model_any_of.md  dnn_selection_mode_any_of.md  early_media_description.md  eas_deployment_charging_information.md  edge_infrastructure_usage_charging_information.md  failure_handling.md  failure_handling_any_of.md  final_unit_indication.md  granted_unit.md  ims_address.md  ims_charging_information.md  ims_node_functionality.md  (+146 more)
lib/sbi/openapi/model/: _3_gppps_data_off_status_any_of.c  _3_gppps_data_off_status_any_of.h  _chargingdata__charging_data_ref__update_post_400_response.c  _chargingdata__charging_data_ref__update_post_400_response.h  _chargingdata_post_400_response.c  _chargingdata_post_400_response.h  access_network_info_change.c  access_network_info_change.h  access_transfer_information.c  access_transfer_information.h  access_transfer_type.c  access_transfer_type.h  access_transfer_type_any_of.c  access_transfer_type_any_of.h  announcement_information.c  announcement_information.h  announcement_privacy_indicator.c  announcement_privacy_indicator.h  announcement_privacy_indicator_any_of.c  announcement_privacy_indicator_any_of.h  api_direction.c  api_direction.h  api_direction_any_of.c  api_direction_any_of.h  called_identity_change.c  called_identity_change.h  charging_characteristics_selection_mode.c  charging_characteristics_selection_mode.h  charging_characteristics_selection_mode_any_of.c  charging_characteristics_selection_mode_any_of.h  charging_data_request.c  charging_data_request.h  charging_data_response.c  charging_data_response.h  charging_notify_request.c  charging_notify_request.h  charging_notify_response.c  charging_notify_response.h  class_identifier.c  class_identifier.h  (+346 more)
lib/sbi/openapi/src/: apiClient.c
lib/sbi/openapi/unit-test/: test__3_gppps_data_off_status_any_of.c  test__chargingdata__charging_data_ref__update_post_400_response.c  test__chargingdata_post_400_response.c  test_access_network_info_change.c  test_access_token_err.c  test_access_token_req.c  test_access_transfer_information.c  test_access_transfer_type.c  test_access_transfer_type_any_of.c  test_announcement_information.c  test_announcement_privacy_indicator.c  test_announcement_privacy_indicator_any_of.c  test_api_direction.c  test_api_direction_any_of.c  test_arp.c  test_called_identity_change.c  test_cell_global_id.c  test_charging_characteristics_selection_mode.c  test_charging_characteristics_selection_mode_any_of.c  test_charging_data_request.c  test_charging_data_response.c  test_charging_notify_request.c  test_charging_notify_response.c  test_class_identifier.c  test_class_identifier_any_of.c  test_coverage_info.c  test_delivery_report_requested.c  test_delivery_report_requested_any_of.c  test_direct_discovery_model.c  test_direct_discovery_model_any_of.c  test_dnn_selection_mode_any_of.c  test_early_media_description.c  test_eas_deployment_charging_information.c  test_edge_infrastructure_usage_charging_information.c  test_eutra_location.c  test_failure_handling.c  test_failure_handling_any_of.c  test_final_unit_indication.c  test_granted_unit.c  test_ims_address.c  (+159 more)
src/smf/: context.c  context.h  fd-path.h  gsm-handler.c  gsm-sm.c  gy-handler.c  meson.build  n4-build.c  n4-handler.c  nchf-build.c  nchf-build.h  nchf-handler.c  nchf-handler.h  ngap-handler.c  npcf-build.c  npcf-handler.c  npcf-handler.h  nsmf-handler.c  nudm-build.c  nudm-handler.c  nudm-handler.h  pfcp-path.c  sbi-path.c  sbi-path.h  smf-sm.c
src/upf/: context.c  context.h  gtp-path.c  n4-handler.c
(+2 files in other folders)
